--- a/src/components/Button/Butoon.css
+++ b/src/components/Button/Butoon.css
@@ -1,16 +1,16 @@
 .Button {
   padding: 8px 16px;
   border-radius: 2px;
-  background-color: #3f51b5;
+  background-color: #76b5c5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
-  color: #fff;
+  color: #0b262d;
   border: 0;
   text-decoration: none;
   cursor: pointer;
   font-family: inherit;
-  font-size: 18px;
+  font-size: 20px;
   line-height: 24px;
   font-style: normal;
   font-weight: 500;
@@ -21,5 +21,10 @@
 
 .Button:hover,
 .Button:focus {
-  background-color: #303f9f;
+  background-color: #36bee0;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
